
[metadata]
name=voxblox
author = Ignacio Martin Vizzo (aka Nacho) and Cyrill Stachniss
author_email=ignaciovizzo@gmail.com
license_files = LICENSE.txt
version=0.1
description=Python bindings for the Voxblox library
long_description=file:README.md,
long_description_content_type=text/markdown
keywords = Voxblox, TSDF, Mapping, SLAM, LiDAR, Odometry, Localization,

[options]
packages = find:
install_requires =
    numpy
    dataclasses
